c4prj1_deck/grade.txt
Grading at Wed Jan  8 23:09:08 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:233:38: error: ‘hands’ undeclared (first use in this function)
       if(valuesEqual(hand->cards[i], hands->cards[j])) ++count;
                                      ^
eval.c:233:38: note: each undeclared identifier is reported only once for each function it appears in
Compilation of eval.c failed

Overall Grade: F
